Add js for betting calculator

--- a/Blexr/assets/scss/style.scss
+++ b/Blexr/assets/scss/style.scss
@@ -11,6 +11,9 @@
 .align-self_end{
   align-self: flex-end;
 }
+.align__self-center{
+  align-self: center;
+}
 .justify_end{
   justify-content: flex-end;
 }
