--- a/Blexr/assets/css/style.css
+++ b/Blexr/assets/css/style.css
@@ -1,128 +1,132 @@
 .container__width {
-	max-width: 900px;
-	width: 900px;
+  max-width: 900px;
+  width: 900px;
 }
 
 .flex {
-	display: flex;
+  display: flex;
 }
 .flex-col {
-	flex-direction: column;
+  flex-direction: column;
 }
 
 .align-self_end {
-	align-self: flex-end;
+  align-self: flex-end;
+}
+
+.align__self-center {
+  align-self: center;
 }
 
 .justify_end {
-	justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .form-layer {
-	flex-grow: 1;
-	justify-content: space-between;
-	margin-bottom: 20px;
+  flex-grow: 1;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 .form-control {
-	display: block;
-	width: 100%;
-	height: calc(2.25rem + 2px);
-	padding: 0.375rem 0.75rem;
-	font-size: 1rem;
-	line-height: 1.5;
-	color: #495057;
-	background-color: #fff;
-	border: 1px solid #ced4da;
-	border-radius: 0.25rem;
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
 }
 
 label {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 .submit {
-	border: 1px solid #242323;
-	background: #242323;
-	color: #fff;
-	padding: 0.375rem 0.75rem;
-	border-radius: 0.25rem;
-	cursor: pointer;
+  border: 1px solid #242323;
+  background: #242323;
+  color: #fff;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
 .submit:hover {
-	background: transparent;
-	color: #242323;
+  background: transparent;
+  color: #242323;
 }
 
 .table {
-	display: block;
-	width: 100%;
-	overflow-x: auto;
-	font-size: 0.875rem;
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  font-size: 0.875rem;
 }
 .table.loading {
-	position: relative;
+  position: relative;
 }
 .table.loading:after {
-	position: absolute;
-	content: "";
-	background: #69656552 url("../spinner.gif") no-repeat center center;
-	width: 100%;
-	height: 100%;
-	top: 0;
+  position: absolute;
+  content: "";
+  background: #69656552 url("../Spinner.gif") no-repeat center center;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 .table td {
-	border-bottom: 1px solid #dee2e6;
-	padding-bottom: 5px;
+  border-bottom: 1px solid #dee2e6;
+  padding-bottom: 5px;
 }
 .table > table {
-	width: 1200px;
+  width: 1200px;
 }
 
 .bookmaker {
-	font-weight: 700;
-	font-size: 0.875rem;
+  font-weight: 700;
+  font-size: 0.875rem;
 }
 
 .prices {
-	display: flex;
+  display: flex;
 }
 .prices span {
-	margin-right: 10px;
+  margin-right: 10px;
 }
 
 .table-striped tbody tr td {
-	padding: 0.625rem;
-	text-align: center;
-	border: 0;
+  padding: 0.625rem;
+  text-align: center;
+  border: 0;
 }
 .table-striped tbody tr td:nth-of-type(2n+1) {
-	background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .team {
-	width: 200px;
-	text-align: center;
+  width: 200px;
+  text-align: center;
 }
 .team small {
-	font-size: 0.75rem;
+  font-size: 0.75rem;
 }
 
 .calc__odds {
-	background: #039d9d;
-	padding: 10px;
-	color: #fff;
-	font-size: 0.875rem;
+  background: #039d9d;
+  padding: 10px;
+  color: #fff;
+  font-size: 0.875rem;
 }
 .calc__title {
-	font-size: 0.875rem;
+  font-size: 0.875rem;
 }
 .calc__button {
-	padding: 0.625rem 0.625rem;
-	border: 1px solid transparent;
-	color: #fff;
-	background: #000;
-	cursor: pointer;
-	border-radius: 0.25rem;
+  padding: 0.625rem 0.625rem;
+  border: 1px solid transparent;
+  color: #fff;
+  background: #000;
+  cursor: pointer;
+  border-radius: 0.25rem;
 }
 
 /*# sourceMappingURL=style.css.map */
